<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/text_view_first_name_caption"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:text="@string/worker_first_name"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/worker_last_name_caption"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="4dp"
		android:layout_marginRight="4dp"
		android:text="@string/worker_last_name"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/text_view_first_name_caption" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/worker_birthday_caption"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="4dp"
		android:layout_marginRight="4dp"
		android:text="@string/worker_birthday"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/worker_last_name_caption" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/worker_age_caption"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:text="@string/worker_age"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/worker_birthday_caption" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/worker_specialty_caption"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="4dp"
		android:layout_marginRight="4dp"
		android:text="@string/worker_specialty"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/worker_age_caption" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="146dp" />


	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/text_view_first_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:textAppearance="@style/TextAppearance.AppCompat"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="Иван" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/text_view_last_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"

		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:textAppearance="@style/TextAppearance.AppCompat"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/text_view_first_name"
		tools:text="Вадалага" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/text_view_birthday"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:textAppearance="@style/TextAppearance.AppCompat"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/text_view_last_name"
		tools:text="22.11.1987 г." />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/text_view_age"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:textAppearance="@style/TextAppearance.AppCompat"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/text_view_birthday"
		tools:text="69" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/text_view_specialty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:textAppearance="@style/TextAppearance.AppCompat"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/text_view_age"
		tools:text="Разработчик" />

</androidx.constraintlayout.widget.ConstraintLayout>